fix language bar and style menu on mobiles and hbs

--- a/frontend/app/styles/blocks/base-editor.scss
+++ b/frontend/app/styles/blocks/base-editor.scss
@@ -8,13 +8,22 @@
 	display: flex;
 	flex-direction: column;
 
+	@include mobile {
+		&__editor-tree {
+			display: none;
+		}
+
+		&__editor-graph {
+			border: $default-border;
+			width: 100%;
+		}
+	}
+
 	&__navbar {
 		background-color: $base-editor-nav-bg-color;
 		display: flex;
-		flex-direction: column;
-		@include from($tablet) {
-			flex-direction: row;
-		}
+		flex-direction: row;
+		flex-wrap: wrap;
 	}
 
 	&__navbar-link-container {
@@ -26,6 +35,7 @@
 		color: $base-editor-nav-link-color;
 		display: block;
 		padding: 12px;
+		text-align: center;
 
 		&.active {
 			background-color: $base-editor-nav-ling-active-bg-color;
